--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,14 @@
     "react-icons": "^4.4.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.2",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.4",
+    "tailwindcss-animate": "^1.0.5",
     "vite": "^2.9.9"
   }
 }
