--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,9 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory: ./client
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
@@ -29,12 +31,15 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: production-files
-          path: ./client/dist
+          path: ./dist
 
   deploy:
     name: Deploy
     needs: build
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./client
     if: github.ref == 'refs/heads/main'
 
     steps:
@@ -42,10 +47,10 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: production-files
-          path: ./client/dist
+          path: ./dist
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./client/dist
+          publish_dir: ./dist
