--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,10 +5,6 @@ on:
     branches:
       - main
 
-defaults:
-  run:
-    working-directory: ./client
-
 jobs:
   build:
     name: Build
@@ -17,6 +13,9 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
+
+      - name: CD
+        run: cd client
 
       - name: Setup Node
         uses: actions/setup-node@v1
