add deploy workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,9 +14,6 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v2
 
-      - name: CD
-        run: cd client
-
       - name: Setup Node
         uses: actions/setup-node@v1
         with:
@@ -27,12 +24,13 @@ jobs:
 
       - name: Build project
         run: npm run build
+        working-directory: ./client
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v2
         with:
           name: production-files
-          path: ./dist
+          path: ./client/dist
 
   deploy:
     name: Deploy
@@ -45,10 +43,10 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: production-files
-          path: ./dist
+          path: ./client/dist
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          publish_dir: ./client/dist
