--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,12 +18,10 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 16
+
       - name: Generate Environment Variables File for Production
-        env:
-          VITE_GIPHY_API: ${{ secrets.VITE_GIPHY_API }}
-        run: |
-          echo "REACT_APP_DOMAIN=$REACT_APP_DOMAIN" >> .env
-          
+        run: echo REACT_APP_DOMAIN=${{ secrets.VITE_GIPHY_API }} >> .env
+
       - name: Install dependencies
         run: npm install
         working-directory: ./client
